--- a/TripSplit/Base.lproj/Main.storyboard
+++ b/TripSplit/Base.lproj/Main.storyboard
@@ -34,40 +34,52 @@
                                             <rect key="frame" x="0.0" y="0.0" width="356" height="136"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Trip #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zWB-bv-Z9v">
-                                                    <rect key="frame" x="20" y="20" width="85" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zfO-Pd-yaz">
-                                                    <rect key="frame" x="20" y="95" width="85" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S1g-0A-Kvj">
-                                                    <rect key="frame" x="294" y="20" width="53" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7II-iF-u2M">
-                                                    <rect key="frame" x="270" y="95" width="77" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="udc-Br-l0p">
+                                                    <rect key="frame" x="-1" y="0.0" width="356" height="136"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="HZL-Ap-ysb">
+                                                            <rect key="frame" x="0.0" y="0.0" width="356" height="136"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trip #" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zWB-bv-Z9v">
+                                                                    <rect key="frame" x="156" y="0.0" width="44" height="38.666666666666664"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S1g-0A-Kvj">
+                                                                    <rect key="frame" x="163" y="48.666666666666671" width="30" height="38.666666666666671"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zfO-Pd-yaz">
+                                                                    <rect key="frame" x="160" y="97.333333333333329" width="36" height="38.666666666666671"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.43529411764705883" green="0.81568627450980391" blue="0.81176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="HZL-Ap-ysb" firstAttribute="centerY" secondItem="udc-Br-l0p" secondAttribute="centerY" id="C4k-pK-pZF"/>
+                                                        <constraint firstItem="HZL-Ap-ysb" firstAttribute="centerX" secondItem="udc-Br-l0p" secondAttribute="centerX" id="I62-bn-wjt"/>
+                                                        <constraint firstItem="HZL-Ap-ysb" firstAttribute="width" secondItem="udc-Br-l0p" secondAttribute="width" id="Xxf-b5-eXG"/>
+                                                        <constraint firstItem="HZL-Ap-ysb" firstAttribute="height" secondItem="udc-Br-l0p" secondAttribute="height" id="lQT-Uo-Ajc"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" red="0.43529411759999997" green="0.81568627449999997" blue="0.81176470590000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="udc-Br-l0p" firstAttribute="leading" secondItem="h9E-Ac-1fc" secondAttribute="leading" id="FUX-37-7dR"/>
+                                            <constraint firstItem="udc-Br-l0p" firstAttribute="top" secondItem="h9E-Ac-1fc" secondAttribute="top" id="S1m-J0-Urt"/>
+                                            <constraint firstAttribute="trailing" secondItem="udc-Br-l0p" secondAttribute="trailing" id="boA-Bd-phL"/>
+                                            <constraint firstAttribute="bottom" secondItem="udc-Br-l0p" secondAttribute="bottom" id="sYD-Ox-tkO"/>
+                                        </constraints>
                                         <connections>
                                             <outlet property="tripDateLabel" destination="zfO-Pd-yaz" id="Zh6-wA-fmG"/>
-                                            <outlet property="tripLocationLabel" destination="7II-iF-u2M" id="Wqj-8f-JHZ"/>
                                             <outlet property="tripNameLabel" destination="zWB-bv-Z9v" id="DmO-ZK-aEp"/>
                                             <outlet property="tripPriceLabel" destination="S1g-0A-Kvj" id="20N-sq-889"/>
                                         </connections>
